--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -200,7 +201,7 @@
             <div class="hidden md:flex space-x-6">
                 <a href="#home" class="nav-link text-dark hover:text-accent">首页</a>
                 <a href="#services" class="nav-link text-dark hover:text-accent">我们的服务</a>
-                <a href="#notice" class="nav-link text-dark hover:text-accent">联系我们进群知</a>
+                <a href="#notice" class="nav-link text-dark hover:text-accent">联系我们进群</a>
                 <a href="#download" class="nav-link text-dark hover:text-accent">下载指南</a>
             </div>
             
@@ -437,7 +438,7 @@
                             </div>
                             <div class="flex justify-between items-center">
                                 <p class="font-mono text-sm sm:text-base"><span class="text-accent font-semibold">密码：</span>
-                                    <span id="id1-password">2UbM17lVHqp5aTWE</span>
+                                    <span id="id1-password">7kstH9j9MYDe906N</span>
                                 </p>
                                 <button class="copy-btn p-2 rounded-full" onclick="copyToClipboard('id1-password', this)">
                                     <i class="far fa-copy"></i>
@@ -457,7 +458,7 @@
                             </div>
                             <div class="flex justify-between items-center">
                                 <p class="font-mono text-sm sm:text-base"><span class="text-accent font-semibold">密码：</span>
-                                    <span id="id2-password">720iHZ4L1afgREl2</span>
+                                    <span id="id2-password">2mvr86TP50e7ICgl</span>
                                 </p>
                                 <button class="copy-btn p-2 rounded-full" onclick="copyToClipboard('id2-password', this)">
                                     <i class="far fa-copy"></i>
@@ -477,7 +478,7 @@
                             </div>
                             <div class="flex justify-between items-center">
                                 <p class="font-mono text-sm sm:text-base"><span class="text-accent font-semibold">密码：</span>
-                                    <span id="id3-password">OvH17xX26GAbwj5C</span>
+                                    <span id="id3-password">Tng47M4km9I6VfV9</span>
                                 </p>
                                 <button class="copy-btn p-2 rounded-full" onclick="copyToClipboard('id3-password', this)">
                                     <i class="far fa-copy"></i>
@@ -649,6 +650,11 @@
         });
     </script>
 </body>
-
 </html>
+
+
+
+
+
+
 
