--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
                             </div>
                             <div class="flex justify-between items-center">
                                 <p class="font-mono text-sm sm:text-base"><span class="text-accent font-semibold">密码：</span>
-                                    <span id="id1-password">97G0Co3dGHPAEcu6</span>
+                                    <span id="id1-password">n2cWqWiw40PHvpx2</span>
                                 </p>
                                 <button class="copy-btn p-2 rounded-full" onclick="copyToClipboard('id1-password', this)">
                                     <i class="far fa-copy"></i>
@@ -458,7 +458,7 @@
                             </div>
                             <div class="flex justify-between items-center">
                                 <p class="font-mono text-sm sm:text-base"><span class="text-accent font-semibold">密码：</span>
-                                    <span id="id2-password">C6D35xw8lDb7fTj6</span>
+                                    <span id="id2-password">f6v1pG46dG5TP7ei</span>
                                 </p>
                                 <button class="copy-btn p-2 rounded-full" onclick="copyToClipboard('id2-password', this)">
                                     <i class="far fa-copy"></i>
@@ -478,7 +478,7 @@
                             </div>
                             <div class="flex justify-between items-center">
                                 <p class="font-mono text-sm sm:text-base"><span class="text-accent font-semibold">密码：</span>
-                                    <span id="id3-password">Vbi8GiJGM8gu7Br3</span>
+                                    <span id="id3-password">wVAd26PdFXvhR4w1</span>
                                 </p>
                                 <button class="copy-btn p-2 rounded-full" onclick="copyToClipboard('id3-password', this)">
                                     <i class="far fa-copy"></i>
@@ -651,6 +651,7 @@
     </script>
 </body>
 </html>
+
 
 
 
